--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     package="com.celpipstore">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"
+    <uses-permission
+        android:name="android.permission.MEDIA_CONTENT_CONTROL"
         tools:ignore="ProtectedPermissions" />
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -24,7 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ListeningTestQuestionActivity"></activity>
+
+        <activity android:name=".ListeningTestQuestionActivity" />
         <activity android:name=".VocabularyTestQuestionsActivity" />
         <activity
             android:name=".SpeakingTestListActivity"
